# sentistream

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config-example.yaml  config.docker.yaml  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: send_bulk_reviews.py
src/sentistream/dashboard/: app.py
src/sentistream/ingestion/: api.py
src/sentistream/services/: clusterer_svc.py  embedder_svc.py  namer_svc.py
src/sentistream/shared/: config.py  db.py  kafka_client.py  models.py  schemas.py
src/sentistream/worker/: clusterer.py  embedder.py  naming.py
tests/: test_api.py  test_clusterer.py  test_config.py  test_embedder.py  test_namer.py  test_schemas.py
